--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,8 @@
     <title>La Casa del Gelat</title>
 </head>
 <body>
-    
+    <header>
+        <img src="/assets/images/header-img.png" alt="Ice cream image" aria-label="Ice cream Image">
+    </header>
 </body>
 </html>
