--- a/templates/index.html
+++ b/templates/index.html
@@ -51,19 +51,48 @@
             d’aprovisionar-se dels ingredients necessaris per tenir sempre estoc fresc per fabricar els gelats i sorbets 
             que ells mateixos produiran.</strong></h6>
     </div>
-    <div class="col-4"><img src="../assets/images/man-making.jpg" alt="Man making Ice Cream"id="man-making-img">
     </div>
     </div>
-    </div>
+    <hr>
 
-    <div class="text-center">
-    <div class="float-left w-33">
-        <h2 class="ml-5">Gelats</h2>
-    </div>
-    <img  id="all-ice-creams-img" src="../assets/images/all-ice-creams.png" alt="Ice creams">
-    <div class="float-right">
-        <h2>Sorbets</h2>
+
+    <div class="row text-center mt-4">
+        <div class="col-3 ml-3">
+            <h2>Gelats</h2>
+            <p>Per l’elaboració dels gelats, la base de la recepta és la llet ecològica. A partir d’aquí, s’incorpora 
+                la proporció exacte de la resta d’ingredients per obtenir els gelats que es poden veure a la vitrina. 
+                Es compta amb els gelats imprescindibles, com la vainilla o la xocolata, però també amb innovacions com 
+                l’avellana amb xocolata blanca i coco; o productes inspirats amb productes d’Olot, com el de Ratafia i 
+                cafè.</p>
+                <hr>
+            <h2>Presentació</h2>
+            <p>La gamma que s’ofereix de gelats i sorbets es pot combinar amb la presentació final que es desitgi. Si es 
+                vol prendre al moment, es pot escollir entre un con (petit, gran, de crocant de xocolata o sense gluten) 
+                o un terrina (petita, mitjana o gran).</p>
+        </div>
+        <div class="col-5 mx-1">
+            <img  id="all-ice-creams-img" src="../assets/images/all-ice-creams.png" alt="Ice creams">
+        </div>
+        <div class="col-3 mr-3">
+            <h2>Sorbets</h2>
+            <p>Per a fer els sorbets s’utilitzen fruites fresques del dia i comprades a Olot. Els tipus de sorbets que 
+                s’ofereixen varien en funció de l’època de l’any, buscant sempre poder utilitzar la fruita de la temporada, 
+                ja que és el component principal (representa entre el 40 i 50% del sorbet), seguit de l’aigua. Els sorbets, 
+                a diferència dels gelats, són elaborats sense llet i, per tant, són lliures d’al·lèrgens.</p>
+                <hr>
+                <h2>Per a restaurants o tercers</h2>
+                <p>Des de La Casa del Gelat s’ofereix la opció de produir i fer arribar als restaurants els gelats o 
+                    sorbets que desitgin incloure a la seva carta. Si no trobeu el gust que esteu buscant, no dubteu en 
+                    contactar amb l’equip, que estarà encantat de produir un producte especial per a vosaltres!</p>
+        </div>
     </div>
 </div>
+<footer class="row bg-dark text-white text-center">
+    <div class="col-4">Compra Aquí!</div>
+    <div class="col-4">La Casa del Gelat</div>
+    <div class="col-4">
+        <div class="col-4">Instagram: </div>
+    </div>
+</footer>
 </body>
 </html>
