Style page footer

--- a/templates/index.html
+++ b/templates/index.html
@@ -57,7 +57,8 @@
 
 
     <div class="row text-center mt-4">
-        <div class="col-3 ml-3">
+        <div class="col-4">
+            <div class="mx-5">
             <h2>Gelats</h2>
             <p>Per l’elaboració dels gelats, la base de la recepta és la llet ecològica. A partir d’aquí, s’incorpora 
                 la proporció exacte de la resta d’ingredients per obtenir els gelats que es poden veure a la vitrina. 
@@ -69,11 +70,13 @@
             <p>La gamma que s’ofereix de gelats i sorbets es pot combinar amb la presentació final que es desitgi. Si es 
                 vol prendre al moment, es pot escollir entre un con (petit, gran, de crocant de xocolata o sense gluten) 
                 o un terrina (petita, mitjana o gran).</p>
+            </div>
         </div>
-        <div class="col-5 mx-1">
+        <div class="col-4">
             <img  id="all-ice-creams-img" src="../assets/images/all-ice-creams.png" alt="Ice creams">
         </div>
-        <div class="col-3 mr-3">
+        <div class="col-4">
+            <div class="mx-5">
             <h2>Sorbets</h2>
             <p>Per a fer els sorbets s’utilitzen fruites fresques del dia i comprades a Olot. Els tipus de sorbets que 
                 s’ofereixen varien en funció de l’època de l’any, buscant sempre poder utilitzar la fruita de la temporada, 
@@ -84,15 +87,19 @@
                 <p>Des de La Casa del Gelat s’ofereix la opció de produir i fer arribar als restaurants els gelats o 
                     sorbets que desitgin incloure a la seva carta. Si no trobeu el gust que esteu buscant, no dubteu en 
                     contactar amb l’equip, que estarà encantat de produir un producte especial per a vosaltres!</p>
+                </div>
         </div>
     </div>
 </div>
-<footer class="row bg-dark text-white text-center">
-    <div class="col-4">Compra Aquí!</div>
-    <div class="col-4">La Casa del Gelat</div>
+<footer class="row bg-dark text-white">
     <div class="col-4">
-        <div class="col-4">Instagram: </div>
+        <p class="ml-3"> Compra Aquí!</p>
+    </div>
+    <div class="col-4 text-center">La Casa del Gelat</div>
+    <div class="col-4">
+        <div class="col-4 float-right">Instagram: <a href="https://instagram.com" target="_blank"><i class="fa-brands fa-instagram"></i></a></div>
     </div>
 </footer>
+<script src="https://kit.fontawesome.com/8b45f7f3ca.js" crossorigin="anonymous"></script>
 </body>
 </html>
