--- a/templates/base.html
+++ b/templates/base.html
@@ -4,11 +4,45 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="stylesheet" href="../assets/css/style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
     <title>La Casa del Gelat</title>
 </head>
 <body>
     <header>
-        <img src="/assets/images/header-img.png" alt="Ice cream image" aria-label="Ice cream Image">
-    </header>
+    <div id="header-img-div">
+        <img id="header-img" src="/assets/images/header-img.png" alt="Ice cream image" aria-label="Ice cream Image">
+    </div>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary bg-dark">
+        <div class="container-fluid">
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul id="menu" class="navbar-nav">
+              <li class="nav-item px-3">
+                <a class="nav-link active text-light" aria-current="page" href="#">Home</a>
+              </li>
+              <li class="nav-item px-3">
+                <a class="nav-link text-light" href="#">Productes</a>
+              </li>
+              <li class="nav-item px-3">
+                <a class="nav-link text-light" href="#">Qui som?</a>
+              </li>
+              <li class="nav-item px-3">
+                <a class="nav-link text-light" href="#">Contacte</a>
+              </li>
+              <li class="nav-item px-3">
+                <a class="nav-link text-light" href="#">Receptes</a>
+              </li>
+              <li class="nav-item px-3">
+                <a class="nav-link text-light" href="#">Compra!</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+</header>
+{% block content %}
+{% endblock %}
 </body>
 </html>
